[package]
name = "longboard"
version = "0.0.2"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "the easy way to surf"
keywords = ["surf", "cli"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/longboard"

[dependencies]
surf = "2.1.0"
structopt = "0.3.21"
atty = "0.2.14"
surf-cookie-middleware = "0.2.0"
env_logger = "0.8.2"

[dependencies.bat]
version = "0.17.1"
default-features = false
features = [
  "atty",
  "clap",
  "dirs",
  "lazy_static",
  "paging",
  "wild",
  "regex-onig",
]

[dependencies.async-std]
version = "1.7.0"
features = ["tokio02", "attributes"]

[dependencies.http-client]
version = "6.2.0"
default-features = false
features = ["h1_client", "hyper_client", "curl_client"]
