[package]
name = "longboard"
version = "0.0.7"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "the easy way to surf"
keywords = ["surf", "cli"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/longboard"

[dependencies]
surf = "2.3.1"
structopt = "0.3.25"
atty = "0.2.14"
surf-cookie-middleware = "0.3.0"
env_logger = "0.9.0"

[dependencies.bat]
version = "0.18.3"
default-features = false
features = [
  "atty",
  "clap",
  "dirs-next",
  "lazy_static",
  "paging",
  "wild",
  "regex-onig",
]

[dependencies.async-std]
version = "1.10.0"
features = ["tokio02", "attributes"]

[dependencies.http-client]
version = "6.3.5"
default-features = false
features = ["h1_client", "hyper_client", "curl_client", "rustls"]
